- add a new pytest_ignore_collect_path(path, config) hook to allow projects and
  plugins to define exclusion behaviour for their directory structure - 
  for example you may define in a conftest.py this method:
        def pytest_ignore_collect_path(path):
            return path.check(link=1)
  to prevent even a collection try of any tests in symlinked dirs. 
- expose previously internal commonly useful methods: 
  py.io.get_terminal_with() -> return terminal width
  py.io.ansi_print(...) -> print colored/bold text on linux/win32
  py.io.saferepr(obj) -> return limited representation string
- expose test outcome related exceptions as py.test.skip.Exception, 
  py.test.raises.Exception etc., useful mostly for plugins
  doing special outcome interpreteration/tweaking
- ship distribute_setup.py version 0.6.10 
- added links to the new capturelog and coverage plugins 


Changes between 1.2.1 and 1.2.0
=====================================

- refined usage and options for "py.cleanup"::

    py.cleanup     # remove "*.pyc" and "*$py.class" (jython) files
    py.cleanup -e .swp -e .cache # also remove files with these extensions
    py.cleanup -s  # remove "build" and "dist" directory next to setup.py files
    py.cleanup -d  # also remove empty directories 
    py.cleanup -a  # synonym for "-s -d -e 'pip-log.txt'"
    py.cleanup -n  # dry run, only show what would be removed

- add a new option "py.test --funcargs" which shows available funcargs 
  and their help strings (docstrings on their respective factory function) 
  for a given test path

- display a short and concise traceback if a funcarg lookup fails 

- early-load "conftest.py" files in non-dot first-level sub directories. 
  allows to conveniently keep and access test-related options in a ``test`` 
  subdir and still add command line options. 
